force-app/main/default/objects/Setting__c/fields/Days_Off_Limit__c.field-meta.xml
<CustomField>
    <fullName>Days_Off_Limit__c</fullName>
    <label>Days Off Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>