force-app/main/default/objects/Setting__c/fields/Food_Compensation_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Food_Compensation_Monthly__c</fullName>
    <label>Food Compensation Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>