force-app/main/default/objects/Setting__c/fields/Health_Compensation_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Health_Compensation_Yearly__c</fullName>
    <label>Health Compensation Yearly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>