force-app/main/default/objects/Setting__c/fields/Invoice_Minimum_Time_to_Bill__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Minimum_Time_to_Bill__c</fullName>
    <label>Invoice Minimum Time to Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>