force-app/main/default/objects/Setting__c/fields/Personal_Vacations_Limit__c.field-meta.xml
<CustomField>
    <fullName>Personal_Vacations_Limit__c</fullName>
    <label>Personal Vacations Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>