force-app/main/default/objects/Setting__c/fields/PL_Invoice_Monthly_Counter__c.field-meta.xml
<CustomField>
    <fullName>PL_Invoice_Monthly_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PL Invoice Monthly Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>