force-app/main/default/objects/Setting__c/fields/Prevent_Next_PL_Counter_Reset__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Next_PL_Counter_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Next PL Counter Reset</label>
    <type>Checkbox</type>
</CustomField>