force-app/main/default/objects/Setting__c/fields/Sport_Compensation_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Sport_Compensation_Monthly__c</fullName>
    <label>Sport Compensation Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>