force-app/main/default/objects/Setting__c/fields/Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Working_Days__c</fullName>
    <label>Working Days BY</label>
    <type>TextArea</type>
</CustomField>