force-app/main/default/objects/Setting__c/fields/Working_Days_PL__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_PL__c</fullName>
    <label>Working Days PL</label>
    <type>TextArea</type>
</CustomField>